# data_generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  do_it.cpp  do_it.hpp  example.cpp  main.cpp  model.cpp  model.hpp  notes.md
cli/: main.cpp
include/: data_generation.hpp  model.hpp
include/data_generator/: data_generator.hpp
lib/: data_generation.cpp  model.cpp
tests/: data.test.cpp
